# menual

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  requirements.txt
menual/: __init__.py  __main__.py  manager.py
menual/mcp/: __main__.py  commands.py  excel.py  planner.py  server.py
menual/ui/: app.py  dialogs.py
