[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menual"
version = "1.0.0"
description = "서버 명령어 매뉴얼 위젯"
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.0",
    "mcp[cli]>=1.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
menual = "menual.__main__:main"
menual-mcp = "menual.mcp:main"

[project.gui-scripts]
menual-gui = "menual.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["menual*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
